<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="suzanasavic.github.com.android.postitapp.data.entities.User" />

        <variable
            name="post"
            type="suzanasavic.github.com.android.postitapp.data.entities.Post" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main">

        <ScrollView
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{user != null ? View.VISIBLE: View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/postDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleHeader"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:background="@drawable/border"
                android:padding="@dimen/standard_padding"
                android:text="@{post.title}"
                app:layout_constraintStart_toStartOf="@id/titleHeader"
                app:layout_constraintTop_toBottomOf="@id/titleHeader" />

            <TextView
                android:id="@+id/bodyHeader"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/body"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <TextView
                android:id="@+id/tvBody"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:background="@drawable/border"
                android:padding="@dimen/standard_padding"
                android:text="@{post.body}"
                app:layout_constraintStart_toStartOf="@+id/bodyHeader"
                app:layout_constraintTop_toBottomOf="@+id/bodyHeader" />

            <TextView
                android:id="@+id/nameHeader"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="@+id/tvBody"
                app:layout_constraintTop_toBottomOf="@+id/tvBody" />


            <TextView
                android:id="@+id/tvName"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:background="@drawable/border"
                android:padding="@dimen/standard_padding"
                android:text="@{user.name}"
                app:layout_constraintStart_toStartOf="@+id/nameHeader"
                app:layout_constraintTop_toBottomOf="@+id/nameHeader" />

            <TextView
                android:id="@+id/emailHeader"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmail"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:background="@drawable/border"
                android:padding="@dimen/standard_padding"
                android:text="@{user.email}"
                app:layout_constraintStart_toStartOf="@+id/emailHeader"
                app:layout_constraintTop_toBottomOf="@+id/emailHeader" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeletePost"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/delete_post"
                app:layout_constraintStart_toStartOf="@+id/tvEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{user != null ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>